--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 
 .menu{
 	overflow: visible;
+	/* position: fixed; */
 	width: 100%;
 	height: 60px;
 	background-color: rgba(102, 98, 98, 0.397);
@@ -86,6 +87,7 @@
 	text-transform: uppercase;
 	text-align: center;
 	color:white;
+	/* position: fixed; */
 }
 
 .text h4{
@@ -130,3 +132,27 @@
 	/* border: 3px solid white; */
 	width: 100px;
 }
+ footer nav{
+	 /* float:right; */
+	 left: 0;
+	 bottom: 0;
+	 width: 100%;
+	 color: white;
+	 text-align: center;
+	 padding: 5px 0px;
+	 background-color: rgb(15, 15, 15);
+ }
+ footer nav ul{
+  	margin-top:15px;
+ }
+ footer nav ul li{
+	display: inline;
+	margin-left: 20px;
+	list-style: none;
+ }
+ footer nav ul li a{
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: 400;
+	font-size: 14px;
+	color: #fff;
+ }
