--- a/css/profile.css
+++ b/css/profile.css
@@ -8,6 +8,7 @@ body {
     width: 100%;
     position: fixed;
     background-color: rgba(0, 0, 0);
+    z-index: 999;
 }
 .content {
     list-style-type: none;
@@ -216,10 +217,40 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
 }
+.page .photo_album {
+    width: 150px;
+    height: 150px;
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    cursor: pointer;
+}
+.photo_album .album_name {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    font-size: 20px;
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    opacity: 0.5;
+    transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+}
+.photo_album:hover .album_name {
+    opacity: 1;
+}
 .page img {
     display: inline-block;
-    width: 16%;
-    height: auto;
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
 }
 .footer{
     width: 100%;
@@ -266,6 +297,10 @@ body {
     .page {
         height: 1300px;
     }
+    .page img {
+        width: 350px;
+        height: 350px;
+    }
 }
 @media screen and (min-width: 3000px){
     .page {
@@ -286,5 +321,9 @@ body {
     }
     .fcontent {
         width: 850px;
+    }
+    .page img {
+        width: 500px;
+        height: 500px;
     }
 }
